--- a/foot/onelight.ini
+++ b/foot/onelight.ini
@@ -1,13 +1,13 @@
-font=SauceCodePro Nerd Font:style=Regular:size=15
-font-bold=SauceCodePro Nerd Font:style=Bold:size=15
+font=SauceCodePro Nerd Font:style=Regular:size=10
+font-bold=SauceCodePro Nerd Font:style=Bold:size=10
 pad=0x6
 
 #light theme
 [cursor]
- color=eeeeee 444444
+ color=000000 444444
 
 [colors]
- background=eeeeee
+ background=444444
  foreground=444444
  regular0=eeeeee  # black
  regular1=af0000  # red
