--- a/foot/light.ini
+++ b/foot/light.ini
@@ -1,52 +1,29 @@
-font=SauceCodePro Nerd Font:style=Regular:size=10
-font-bold=SauceCodePro Nerd Font:style=Bold:size=10
-pad=0x6
+font=SauceCodePro Nerd Font:style=Regular:size=14
+font-bold=SauceCodePro Nerd Font:style=Bold:size=14
+pad=2x4
 
-#light theme
-[cursor]
- color=eeeeee 444444
+#[cursor]
+#color = eff0f2 4a4b4e
 
 [colors]
- background=eeeeee
- foreground=444444
- regular0=eeeeee  # black
- regular1=af0000  # red
- regular2=008700  # green
- regular3=5f8700  # yellow
- regular4=0087af  # blue
- regular5=878787  # magenta
- regular6=005f87  # cyan
- regular7=764e37  # white
- bright0=bcbcbc   # bright black
- bright1=d70000   # bright red
- bright2=d70087   # bright green
- bright3=8700af   # bright yellow
- bright4=d75f00   # bright blue
- bright5=d75f00   # bright magenta
- bright6=4c7a5d   # bright cyan
- bright7=005faf   # bright white
+foreground = 4a4b4e
+background = eff0f2
+regular0 = 4a4b4e
+regular1 = a32a3a
+regular2 = 206620
+regular3 = 745300
+regular4 = 4b529a
+regular5 = 8d377e
+regular6 = 086784
+regular7 = dee2e0
+bright0 = 676364
+bright1 = a64822
+bright2 = 187408
+bright3 = 8b590a
+bright4 = 5c59b2
+bright5 = 8e45a8
+bright6 = 3f649c
+bright7 = eff0f2
+#selection-foreground = 676364
+#selection-background = dee2e0
 
-
-
-
-
-#[colors]
-#background=1c1c1c
-#regular0=151515
-#regular1=a53c23
-#regular2=7b9246
-#regular3=d3a04d
-#regular4=5f87af
-#regular5=9f4e85
-#regular6=7dd6cf
-#regular7=d0d0d0
-#
-## Bright colors (color palette 8-15)
-#bright0=666666   # bright black
-#bright1=dca3a3     # bright red
-#bright2=bfebbf   # bright green
-#bright3=f0dfaf   # bright yellow
-#bright4=8cd0d3   # bright blue
-#bright5=fcace3   # bright magenta
-#bright6=b3ffff   # bright cyan
-#bright7=ffffff   # bright white
