--- a/foot/dark.ini
+++ b/foot/dark.ini
@@ -1,24 +1,25 @@
-# Gruvbox
-#font=SauceCodePro Nerd Font:style=Regular:size=12
-font=monospace:size=12
+font=SauceCodePro Nerd Font:style=Regular:size=14
 font-bold=SauceCodePro Nerd Font:style=Bold:size=14
+pad=4x4
 
 [colors]
-background=282828
-foreground=ebdbb2
-regular0=282828
-regular1=cc241d
-regular2=98971a
-regular3=d79921
-regular4=458588
-regular5=b16286
-regular6=689d6a
-regular7=a89984
-bright0=928374
-bright1=fb4934
-bright2=b8bb26
-bright3=fabd2f
-bright4=83a598
-bright5=d3869b
-bright6=8ec07c
-bright7=ebdbb2
+background=1c1c1c
+foreground=bbbbbb
+regular0=151515
+regular1=a53c23
+regular2=7b9246
+regular3=d3a04d
+regular4=5f87af
+regular5=9f4e85
+regular6=7dd6cf
+regular7=d0d0d0
+
+# Bright colors (color palette 8-15)
+bright0=666666   # bright black
+bright1=dca3a3   # bright red
+bright2=bfebbf   # bright green
+bright3=f0dfaf   # bright yellow
+bright4=8cd0d3   # bright blue
+bright5=fcace3   # bright magenta
+bright6=b3ffff   # bright cyan
+bright7=ffffff   # bright white
