--- a/foot/dark.ini
+++ b/foot/dark.ini
@@ -1,25 +1,26 @@
-font=SauceCodePro Nerd Font:style=Regular:size=14
-font-bold=SauceCodePro Nerd Font:style=Bold:size=14
+font=DaddyTimeMono Nerd Font:style=Regular:size=13
+font-bold=DaddyTimeMono Nerd Font:style=Bold:size=13
 pad=4x4
 
 [colors]
-background=1c1c1c
-foreground=bbbbbb
-regular0=151515
-regular1=a53c23
-regular2=7b9246
-regular3=d3a04d
-regular4=5f87af
-regular5=9f4e85
-regular6=7dd6cf
+background=4b4b4b
+foreground=d9d9d9
+
+regular0=4e4e4e
+regular1=d68787
+regular2=5f865f
+regular3=d8af5f
+regular4=85add4
+regular5=d7afaf
+regular6=87afaf
 regular7=d0d0d0
 
 # Bright colors (color palette 8-15)
-bright0=666666   # bright black
-bright1=dca3a3   # bright red
-bright2=bfebbf   # bright green
-bright3=f0dfaf   # bright yellow
-bright4=8cd0d3   # bright blue
-bright5=fcace3   # bright magenta
-bright6=b3ffff   # bright cyan
-bright7=ffffff   # bright white
+bright0=626262 # bright black
+bright1=d75f87 # bright red
+bright2=87af87 # bright green
+bright3=ffd787 # bright yellow
+bright4=add4fb # bright blue
+bright5=ffafaf # bright magenta
+bright6=87d7d7 # bright cyan
+bright7=e4e4e4 # bright white
