--- a/foot/light.ini
+++ b/foot/light.ini
@@ -1,29 +1,26 @@
-font=SauceCodePro Nerd Font:style=Regular:size=14
-font-bold=SauceCodePro Nerd Font:style=Bold:size=14
-pad=2x4
-
-#[cursor]
-#color = eff0f2 4a4b4e
+font=DaddyTimeMono Nerd Font:style=Regular:size=14
+font-bold=DaddyTimeMono Nerd Font:style=Bold:size=14
+pad=4x4
 
 [colors]
-foreground = 4a4b4e
-background = eff0f2
-regular0 = 4a4b4e
-regular1 = a32a3a
-regular2 = 206620
-regular3 = 745300
-regular4 = 4b529a
-regular5 = 8d377e
-regular6 = 086784
-regular7 = dee2e0
-bright0 = 676364
-bright1 = a64822
-bright2 = 187408
-bright3 = 8b590a
-bright4 = 5c59b2
-bright5 = 8e45a8
-bright6 = 3f649c
-bright7 = eff0f2
-#selection-foreground = 676364
-#selection-background = dee2e0
+background=dadada
+foreground=4e4e4e
 
+regular0=4e4e4e
+regular1=af5f5f
+regular2=5f885f
+regular3=af8760
+regular4=5f87ae
+regular5=875f87
+regular6=5f8787
+regular7=e4e4e4
+
+# Bright colors (color palette 8-15)
+bright0=3a3a3a #bright black
+bright1=870100 #bright red
+bright2=005f00 #bright green
+bright3=d8865f #bright yellow
+bright4=0087af #bright blue
+bright5=87025f #bright magenta
+bright6=008787 #bright cyan
+bright7=eeeeee #bright white
