--- a/foot/dark.ini
+++ b/foot/dark.ini
@@ -1,6 +1,7 @@
-font=DaddyTimeMono Nerd Font:style=Regular:size=13
-font-bold=DaddyTimeMono Nerd Font:style=Bold:size=13
-pad=4x4
+font=SauceCodePro Nerd Font:style=Regular:size=11.5
+font-bold=SauceCodePro Nerd Font:style=SemiBold:size=11.5                                               
+
+pad=0x4
 
 [colors]
 background=4b4b4b
