--- a/sway/config
+++ b/sway/config
@@ -1,4 +1,4 @@
-client.focused #875f5f #875f5f #1c1c1c #ffffff #858585
+client.focused #875f5f #875f5f #1c1c1c #ffffff #875f5f
 #client.focused #333333 #60d7cd #1c1c1c #ffffff #60d7cd
 client.unfocused #333333 #333333 #b0b0b0 #ffffff #858585
 
@@ -57,6 +57,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # Start a terminal
     bindsym $mod+a exec $term -c /home/hi/.config/foot/dark.ini
 
+    # Start wofi
+    bindsym $mod+d exec wofi --insensitive --show drun
+
     # Kill focused window
     bindsym $mod+h kill
 
@@ -74,7 +77,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
-#
+
     # Move your focus around
     bindsym $mod+$left focus left
     bindsym $mod+$right focus right
@@ -91,19 +94,19 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 	bindsym $mod+Shift+Up move up
 	bindsym $mod+Shift+Right move right
 
-	bindsym $mod+Ctrl+v splith
-	bindsym $mod+Ctrl+z splitv
-	bindsym $mod+Ctrl+t layout tabbed
-	bindsym $mod+Ctrl+s layout toggle split
+	#bindsym $mod+v splith
+	#bindsym $mod+z splitv
+	#bindsym $mod+Ctrl+t layout tabbed
+	bindsym $mod+v layout toggle splith tabbed
 	bindsym $mod+Ctrl+l sticky toggle
 
 
 	# Toggle the current focus between tiling and floating mode
     bindsym $mod+Shift+space floating toggle
     # Swap focus between the tiling area and the floating area
-    bindsym $mod+e workspace back_and_forth
-	bindsym $mod+f fullscreen
-    bindsym $mod+z focus parent
+    #bindsym $mod+e workspace back_and_forth
+	bindsym $mod+b fullscreen
+    #bindsym $mod+z focus parent
     bindsym $mod+Shift+minus move scratchpad
     bindsym $mod+minus scratchpad show
 
@@ -112,10 +115,10 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
+    bindsym $mod+g workspace number 1
+    bindsym $mod+m workspace number 2
+    bindsym $mod+f workspace number 3
+    bindsym $mod+w workspace number 4
     bindsym $mod+5 workspace number 5
     bindsym $mod+6 workspace number 6
     bindsym $mod+7 workspace number 7
@@ -124,10 +127,10 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+0 workspace number 10
 
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1 
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
+    bindsym $mod+mod5+g move container to workspace number 1 
+    bindsym $mod+mod5+m move container to workspace number 2
+    bindsym $mod+mod5+f move container to workspace number 3
+    bindsym $mod+mod5+w move container to workspace number 4
     bindsym $mod+Shift+5 move container to workspace number
     bindsym $mod+Shift+6 move container to workspace number 
     bindsym $mod+Shift+7 move container to workspace number 
@@ -165,12 +168,13 @@ mode "resize" {
 #
 # Read `man 5 sway-bar` for more information about this section.
 input * {
-	xkb_layout "custom"
-	xkb_variant "dvp"
+	xkb_layout "custom, us"
+	xkb_variant "dvp, intl"
 	repeat_rate 50
 	repeat_delay 400 
 	tap enable
-
+    #next keyboard layout with caps lock
+    xkb_options grp:caps_toggle
 }
 
 bar {
