--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,24 +1,34 @@
-#font=Source Code Pro:style=Regular:size=14
-#font-bold=Source Code Pro:style=Bold:size=14
-font=SauceCodePro Nerd Font:style=Regular:size=14 
-font-bold=SauceCodePro Nerd Font:style=Bold:size=14
-pad=6x6
+# -*- conf -*-
+# theme: Nord
+# author: Arctic Ice Studio <development@arcticicestudio.com>, Sven Greb <code@svengreb.de>
+# description: „Nord“ — An arctic, north-bluish color palette
+#
+# this specific foot theme is based on nord-alacritty:
+# https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
+font=SauceCodePro Nerd Font:style=Regular:size=11.5
+font-bold=SauceCodePro Nerd Font:style=SemiBold:size=11.5                                               
+
+pad=10x10
+
+[cursor]
+color = 2e3440 d8dee9
+
 [colors]
-background=282828
-foreground=ebdbb2
-regular0=282828
-regular1=cc241d
-regular2=98971a
-regular3=d79921
-regular4=458588
-regular5=b16286
-regular6=689d6a
-regular7=a89984
-bright0=928374
-bright1=fb4934
-bright2=b8bb26
-bright3=fabd2f
-bright4=83a598
-bright5=d3869b
-bright6=8ec07c
-bright7=ebdbb2
+background=EBEAF2
+foreground=004F7C
+regular0=003B4E
+regular1=E64569
+regular2=069F5F
+regular3=DAB752
+regular4=439ECF
+regular5=D961DC
+regular6=00B1BE
+regular7=B3B3B3
+bright0=3E89A1
+bright1=E4859A
+bright2=A2CCA1
+bright3=E1E387
+bright4=6FBBE2
+bright5=E586E7
+bright6=96DCDA
+bright7=DEDEDE
