--- a/foot/nord.ini
+++ b/foot/nord.ini
@@ -1,3 +1,4 @@
+# -*- conf -*-
 # theme: Nord
 # author: Arctic Ice Studio <development@arcticicestudio.com>, Sven Greb <code@svengreb.de>
 # description: „Nord“ — An arctic, north-bluish color palette
@@ -9,14 +10,13 @@ font-bold=SauceCodePro Nerd Font:style=SemiBold:size=11.5
 
 pad=10x10
 
-[cursor]
-color = 2e3440 d8dee9
 
 [colors]
 foreground = d8dee9
 background = 2e3440
-#selection-foreground = d8dee9
-#selection-background = 4c566a
+
+# selection-foreground = d8dee9
+# selection-background = 4c566a
 
 regular0 = 3b4252
 regular1 = bf616a
