--- a/nvim/lua/.luarc.json
+++ b/nvim/lua/.luarc.json
@@ -25,5 +25,6 @@
         "/home/hi/.local/share/nvim/site/pack/plugins/start/cmp-nvim-lsp/after",
         "/usr/share/vim/vimfiles",
         "${3rd}/luassert/library"
-    ]
+    ],
+    "workspace.checkThirdParty": false
 }
