--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -32,3 +32,8 @@ bright4=6FBBE2
 bright5=E586E7
 bright6=96DCDA
 bright7=DEDEDE
+
+[key-bindings]
+font-increase=Control+y
+font-decrease=Control+o
+font-reset=Control+r
