--- a/foot/nord.ini
+++ b/foot/nord.ini
@@ -5,8 +5,8 @@
 #
 # this specific foot theme is based on nord-alacritty:
 # https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
-font=SauceCodePro Nerd Font:style=Regular:size=11.5
-font-bold=SauceCodePro Nerd Font:style=SemiBold:size=11.5                                               
+font=SauceCodePro Nerd Font:style=Regular:size=19
+font-bold=SauceCodePro Nerd Font:style=SemiBold:size=19
 
 pad=10x10
 
@@ -44,3 +44,8 @@ dim4 = 68809a
 dim5 = 8c738c
 dim6 = 6d96a5
 dim7 = aeb3bb
+
+[key-bindings]
+font-increase=Control+y
+font-decrease=Control+o
+font-reset=Control+r
