--- a/foot/catppuccin_frappe.ini
+++ b/foot/catppuccin_frappe.ini
@@ -4,7 +4,6 @@ font-bold=SauceCodePro Nerd Font:style=SemiBold:size=19
 pad=10x10
 
 
-
 [colors]
 foreground=c6d0f5 # Text
 background=303446 # Base
@@ -24,3 +23,8 @@ bright4=8caaee    # blue
 bright5=f4b8e4    # pink
 bright6=81c8be    # teal
 bright7=a5adce    # Subtext 0
+
+[key-bindings]
+font-increase=Control+y
+font-decrease=Control+o
+font-reset=Control+r
