--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,37 +1,32 @@
-# -*- conf -*-
-# theme: Nord
-# author: Arctic Ice Studio <development@arcticicestudio.com>, Sven Greb <code@svengreb.de>
-# description: „Nord“ — An arctic, north-bluish color palette
-#
-# this specific foot theme is based on nord-alacritty:
-# https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
-font=SauceCodePro Nerd Font:style=Regular:size=11
-font-bold=SauceCodePro Nerd Font:style=SemiBold:size=11
+font=Hack Nerd Font:style=Regular:size=14
+font-bold=Hack Nerd Font:style=Bold:size=14
 
-pad=10x10
+pad=10x7
 
 [cursor]
 color = 2e3440 d8dee9
 
+
+
 [colors]
-background=EBEAF2
-foreground=004F7C
-regular0=003B4E
-regular1=E64569
-regular2=069F5F
-regular3=DAB752
-regular4=439ECF
-regular5=D961DC
-regular6=00B1BE
-regular7=B3B3B3
-bright0=3E89A1
-bright1=E4859A
-bright2=A2CCA1
-bright3=E1E387
-bright4=6FBBE2
-bright5=E586E7
-bright6=96DCDA
-bright7=DEDEDE
+background=24283b
+foreground=c0caf5
+regular0=1D202F
+regular1=f7768e
+regular2=9ece6a
+regular3=e0af68
+regular4=7aa2f7
+regular5=bb9af7
+regular6=7dcfff
+regular7=a9b1d6
+bright0=414868
+bright1=f7768e
+bright2=9ece6a
+bright3=e0af68
+bright4=7aa2f7
+bright5=bb9af7
+bright6=7dcfff
+bright7=c0caf5
 
 [key-bindings]
 font-increase=Control+y
