--- a/sway/config
+++ b/sway/config
@@ -1,9 +1,9 @@
 include scripts/catppuccin_frappe_colors
 
 # target                    title       bg          text        indicator       border
-client.focused              $blue       #7aa2f7     #24283b       $rosewater      $blue
-client.unfocused            $base       #414868     #a9b1d6       $rosewater      $overlay0
-client.focused_inactive     $blue       $blue       $base       $rosewater      $blue
+client.focused              $blue       #2e7de9     #e9e9ed       $rosewater      $blue
+client.unfocused            $base       #737994     #e9e9ed       $rosewater      $overlay0
+client.focused_inactive     $blue       $blue       $base         $rosewater      $blue
 
 
 workspace_layout tabbed
