--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -10,7 +10,7 @@ font-reset=Control+r
 
 
 #tokyonight storm
-#
+
 #[colors]
 #background=24283b
 #foreground=c0caf5
@@ -31,8 +31,8 @@ font-reset=Control+r
 #bright6=7dcfff
 #bright7=c0caf5
 
-#tokyonight day
-
+##tokyonight day
+#
 [colors]
 foreground=3760bf
 background=e1e2e7
@@ -57,8 +57,8 @@ bright4=2e7de9
 bright5=9854f1
 bright6=007197
 bright7=3760bf
-
-16=b15c00
-17=c64343
-
-
+#
+#16=b15c00
+#17=c64343
+#
+#
