--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,57 +8,22 @@ font-increase=Control+y
 font-decrease=Control+o
 font-reset=Control+r
 
-
-#tokyonight storm
-
-#[colors]
-#background=24283b
-#foreground=c0caf5
-#regular0=1D202F
-#regular1=f7768e
-#regular2=9ece6a
-#regular3=e0af68
-#regular4=7aa2f7
-#regular5=bb9af7
-#regular6=7dcfff
-#regular7=a9b1d6
-#bright0=414868
-#bright1=f7768e
-#bright2=9ece6a
-#bright3=e0af68
-#bright4=7aa2f7
-#bright5=bb9af7
-#bright6=7dcfff
-#bright7=c0caf5
-
-##tokyonight day
-#
 [colors]
-foreground=3760bf
-background=e1e2e7
-selection-foreground=3760bf
-selection-background=b6bfe2
-urls=387068
-
-regular0=e9e9ed
-regular1=f52a65
-regular2=587539
-regular3=8c6c3e
-regular4=2e7de9
-regular5=9854f1
-regular6=007197
-regular7=6172b0
-
-bright0=a1a6c5
-bright1=f52a65
-bright2=587539
-bright3=8c6c3e
-bright4=2e7de9
-bright5=9854f1
-bright6=007197
-bright7=3760bf
-#
-#16=b15c00
-#17=c64343
-#
-#
+foreground=cad3f5 # Text
+background=24273a # Base
+regular0=494d64   # Surface 1
+regular1=ed8796   # red
+regular2=a6da95   # green
+regular3=eed49f   # yellow
+regular4=8aadf4   # blue
+regular5=f5bde6   # pink
+regular6=8bd5ca   # teal
+regular7=b8c0e0   # Subtext 1
+bright0=5b6078    # Surface 2
+bright1=ed8796    # red
+bright2=a6da95    # green
+bright3=eed49f    # yellow
+bright4=8aadf4    # blue
+bright5=f5bde6    # pink
+bright6=8bd5ca    # teal
+bright7=a5adcb    # Subtext 0
