--- a/starship.toml
+++ b/starship.toml
@@ -22,8 +22,9 @@ $time\
 [directory]
 style = "fg:#24283b bg:#7aa2f7"
 format = "[ $path ]($style)"
-truncation_length = 3
+truncation_length = 4
 truncation_symbol = "…/"
+truncate_to_repo = false
 
 [directory.substitutions]
 "Documents" = "󰈙 "
