--- a/waybar/config
+++ b/waybar/config
@@ -1,10 +1,9 @@
 {
 	"layer": "top",
-	"position": "right",
-    "width": 50,
+	"position": "bottom",
     "ipc": true,
-	"modules-center":["sway/workspaces", "sway/mode"], 
     "modules-left":["custom/clock_icon","clock", "custom/calendar_icon", "clock#date"],
+	"modules-center":["sway/workspaces", "sway/mode"], 
     "modules-right":["custom/backlight_icon", "backlight", "battery#icon", "battery"],
 
     "custom/backlight_icon": {"format":""},
@@ -16,14 +15,14 @@
     "custom/clock_icon": {"format":""},
 	
 	"clock": {
-		"format": "{:%H\n%M}",
+		"format": "{:%H:%M}",
         "timezone": "Asia/Taipei",
 	},
 
     "custom/calendar_icon": {"format":""},
 
 	"clock#date": {
-		"format": "{:%d\n%m}",
+		"format": "{:%d/%m}",
 		"timezone": "Asia/Taipei",
 	},
 	
@@ -31,13 +30,15 @@
 	"sway/workspaces": {
     	"disable-scroll": true,
     	"format": "{name}",
-		"persistent_workspaces": {
+        "persistent_workspaces": {
             "1": [],
             "2": [],
             "3": [],
             "4": [],
     	}
 	},
+
+
 
     "battery#icon": {
         "format": "{icon}",
