--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,12 +1,13 @@
 font=Hack Nerd Font:style=Regular:size=14
 font-bold=Hack Nerd Font:style=Bold:size=14
 
-pad=10x7
+pad=7x7
 
 [key-bindings]
-font-increase=Control+y
-font-decrease=Control+o
+font-increase=Control+o
+font-decrease=Control+y
 font-reset=Control+r
+spawn-terminal=Mod1+i
 
 [colors]
 foreground=cad3f5 # Text
