--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,6 +8,8 @@ font-increase=Control+o
 font-decrease=Control+y
 font-reset=Control+r
 spawn-terminal=Mod1+i
+scrollback-up-half-page=Control+m
+scrollback-down-half-page=Control+f
 
 [colors]
 foreground=cad3f5 # Text
