--- a/sway/config
+++ b/sway/config
@@ -1,4 +1,3 @@
-
 # target                    title        bg          text        indicator    child_border
 client.focused              #8caaee      #7aa2f7     #303446     #f2d5cf      #8caaee
 client.unfocused            #303446      #737994     #e9e9ed     #f2d5cf      #24273a
@@ -72,7 +71,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+d exec fuzzel
 
     # Kill focused window
-    bindsym $mod+k kill
+    bindsym $mod+mod3+k kill
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -199,8 +198,8 @@ mode "workspace" {
 input * {
 	xkb_layout "custom, us"
 	xkb_variant "dvp, intl"
-	repeat_rate 50
-	repeat_delay 400 
+	repeat_rate 100
+	repeat_delay 200
 	tap enable
     #next keyboard layout with caps lock
     xkb_options grp:caps_toggle
